--- a/requirements.txt
+++ b/requirements.txt
@@ -1,29 +1,10 @@
-Pillow==2.3.0
-beautifulsoup4==4.2.1
-chardet==2.2.1
-colorama==0.2.5
-decorator==3.4.0
-html5lib==0.999
-ipython==1.2.1
-lxml==3.3.3
-matplotlib==1.3.1
-nose==1.3.1
-numexpr==2.2.2
-numpy==1.8.2
-pandas==0.13.1
-pycurl==7.19.3
-pygobject==3.12.0
-pyparsing==2.0.1
-python-apt==0.9.3.5ubuntu2
-python-dateutil==2.0
-pytz==2012c
-requests==2.2.1
+certifi==2018.8.24
+mkl-fft==1.0.4
+mkl-random==1.0.1
+numpy==1.15.1
+pandas==0.23.4
+python-dateutil==2.7.3
+pytz==2018.5
 scikit-learn==0.19.2
-scipy==0.13.3
-simplegeneric==0.8.1
-six==1.5.2
-tables==3.1.1
-tornado==3.1.1
-unattended-upgrades==0.1
-urllib3==1.7.1
-wheel==0.24.0
+scipy==1.1.0
+six==1.11.0
